--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div id="ac-wrapper">
  <div id="popup">
  <center>
-	 <h2>By selecting to continue, we will collect your location information to place you on the map. We will not store or ever share this information.</h2>
+	 <h2>Select continue to consent to us collecting your geolocation to place you on the map. We will not store or share this information.</h2>
 		 <input type="submit" name="submit" value="Continue" onClick="PopUp()" />
  </center>
  </div>
