--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div id="ac-wrapper">
  <div id="popup">
  <center>
-	 <h2>Selecting continue ensures conset to the collection of your geolocation to place you on the map. We will not store or share this information.</h2>
+	 <h2>By continuing, you agree to the collection of your geolocation to place a point on the map. <br><br> <i>We will not store or share this information.</i></h2>
 		 <input type="submit" name="submit" value="Continue" onClick="PopUp()" />
  </center>
  </div>
