--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 <body>
 	<div id="ac-wrapper">
  <div id="popup">
+	 <div id="popuptext">
  <center>
-	 <h2>By continuing, you agree to the collection of your geolocation to place a point on the map. <br><br> <i>We will not store or share this information.</i></h2>
+	 <p>By continuing, you agree to the collection of your geolocation to place a point on the map. <br><br> <i>We will not store or share this information.</i></p>
 		 <input type="submit" name="submit" value="Continue" onClick="PopUp()" />
  </center>
+</div>
  </div>
 </div>
 	<div id="map"></div>
