--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
 <body>
 	<div id="ac-wrapper">
  <div id="popup">
-	 <div id="popuptext">
  <center>
-	 <p>By continuing, you agree to the collection of your geolocation to place a point on the map. <br><br> <i>We will not store or share this information.</i></p>
+	 <h3>By continuing, you agree to the collection of your geolocation to place a point on the map. <br><br> <i>We will not store or share this information.</i></h3>
 		 <input type="submit" name="submit" value="Continue" onClick="PopUp()" />
  </center>
-</div>
  </div>
 </div>
 	<div id="map"></div>
